syntax = "proto3";

package datamodifier;

option go_package = "/api/v1";

service DataModifier {
    rpc AddAbsenceStatus(SourceData) returns (ModifiedData) {}
}

message TimePeriod {
    string date_from = 1;
    string date_to = 2;
}

message UserData {
    string display_name = 1;
    string email = 2;
    string mobile_phone = 3;
    string work_phone = 4;
}

message SourceData {
    UserData user_data = 1;
    TimePeriod time_period = 2;
}

message ModifiedData {
    UserData modified_user_data = 1;
}